--- a/src/main/resources/static/markdown-it.html
+++ b/src/main/resources/static/markdown-it.html
@@ -36,6 +36,15 @@
 <script type="text/javascript" src="js/prism.js"></script>
 <script type="text/javascript">
 
+    function escapeHTML(value) {
+        return value
+            .replace(/&/g, '&amp;')
+            .replace(/</g, '&lt;')
+            .replace(/>/g, '&gt;')
+            .replace(/"/g, '&quot;')
+            .replace(/'/g, '&#x27;');
+    }
+
     function debounce(fn, wait) {
         let timer = null;
         return function () {
@@ -57,7 +66,7 @@
             _strict: false,
             _view: 'html', // html / src / debug
             highlight: function (str, lang) {
-                return '<pre><code class="line-numbers language-' + lang + '">' + str + '</code></pre>';
+                return '<pre><code class="line-numbers language-' + lang + '">' + escapeHTML(str) + '</code></pre>';
             }
         };
 
